updated spring boot version (#5)
* updated spring boot version